add dashboard to usersManag, divide 2 issues tables into tabs

--- a/src/main/resources/org/proview/test/IssueListView.fxml
+++ b/src/main/resources/org/proview/test/IssueListView.fxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
@@ -18,80 +18,86 @@
         <fx:include source="AdminManagementNavBarView.fxml" />
     </left>
    <center>
-      <ScrollPane maxWidth="-Infinity">
-         <content>
-            <VBox prefHeight="985.0" prefWidth="1296.0">
+      <VBox prefHeight="985.0" prefWidth="1303.0">
+         <children>
+            <HBox alignment="CENTER" prefHeight="126.0" spacing="20.0">
                <children>
-                  <HBox alignment="CENTER" prefHeight="126.0" spacing="20.0">
+                  <VBox alignment="CENTER" prefHeight="173.0" prefWidth="239.0">
                      <children>
-                        <VBox alignment="CENTER" prefHeight="173.0" prefWidth="239.0">
-                           <children>
-                              <Label fx:id="totalIssuesLabel" text="100">
-                                 <font>
-                                    <Font size="62.0" />
-                                 </font>
-                              </Label>
-                              <Label text="Total Issues">
-                                 <font>
-                                    <Font size="24.0" />
-                                 </font>
-                              </Label>
-                           </children>
-                        </VBox>
-                        <VBox alignment="CENTER" prefHeight="173.0" prefWidth="239.0">
-                           <children>
-                              <Label fx:id="currentIssuesLabel" text="100">
-                                 <font>
-                                    <Font size="62.0" />
-                                 </font>
-                              </Label>
-                              <Label text="Current Issues">
-                                 <font>
-                                    <Font size="24.0" />
-                                 </font>
-                              </Label>
-                           </children>
-                        </VBox>
-                        <VBox alignment="CENTER" prefHeight="173.0" prefWidth="239.0">
-                           <children>
-                              <Label fx:id="overdueLabel" text="100">
-                                 <font>
-                                    <Font size="62.0" />
-                                 </font>
-                              </Label>
-                              <Label text="Overdue">
-                                 <font>
-                                    <Font size="24.0" />
-                                 </font>
-                              </Label>
-                           </children>
-                        </VBox>
+                        <Label fx:id="totalIssuesLabel" text="100">
+                           <font>
+                              <Font size="62.0" />
+                           </font>
+                        </Label>
+                        <Label text="Total Issues">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                        </Label>
                      </children>
-                  </HBox>
-                  <TextField onInputMethodTextChanged="#onFilterTextFieldChanged" promptText="Search" />
-                  <Label text="Borrowing Books" />
-                  <TableView fx:id="borrowingTableView">
-                    <columns>
-                      <TableColumn prefWidth="75.0" text="C1" />
-                      <TableColumn prefWidth="75.0" text="C2" />
-                    </columns>
-                     <columnResizePolicy>
-                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                     </columnResizePolicy>
-                  </TableView>
-                  <Label text="Returned Books" />
-                  <TableView fx:id="borrowedTableView">
-                    <columns>
-                      <TableColumn prefWidth="75.0" text="C1" />
-                      <TableColumn prefWidth="75.0" text="C2" />
-                    </columns>
-                     <columnResizePolicy>
-                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                     </columnResizePolicy>
-                  </TableView>
+                  </VBox>
+                  <VBox alignment="CENTER" prefHeight="173.0" prefWidth="239.0">
+                     <children>
+                        <Label fx:id="currentIssuesLabel" text="100">
+                           <font>
+                              <Font size="62.0" />
+                           </font>
+                        </Label>
+                        <Label text="Current Issues">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </VBox>
+                  <VBox alignment="CENTER" prefHeight="173.0" prefWidth="239.0">
+                     <children>
+                        <Label fx:id="overdueLabel" text="100">
+                           <font>
+                              <Font size="62.0" />
+                           </font>
+                        </Label>
+                        <Label text="Overdue">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </VBox>
                </children>
-            </VBox>
-         </content>
-      </ScrollPane>
+            </HBox>
+            <TextField onInputMethodTextChanged="#onFilterTextFieldChanged" promptText="Search" />
+            <TabPane prefHeight="550.0" prefWidth="1305.0" tabClosingPolicy="UNAVAILABLE">
+              <tabs>
+                <Tab text="Current Issues">
+                     <content>
+                        <VBox prefHeight="200.0" prefWidth="100.0">
+                           <children>
+                              <TableView fx:id="borrowingTableView" prefHeight="520.0" prefWidth="1305.0" tableMenuButtonVisible="true">
+                                 <columnResizePolicy>
+                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                 </columnResizePolicy>
+                              </TableView>
+                           </children>
+                        </VBox>
+                     </content>
+                </Tab>
+                <Tab text="Past Issues">
+                     <content>
+                        <VBox prefHeight="200.0" prefWidth="100.0">
+                           <children>
+                              <TableView fx:id="borrowedTableView" prefHeight="520.0" prefWidth="1305.0" tableMenuButtonVisible="true">
+                                 <columnResizePolicy>
+                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                 </columnResizePolicy>
+                              </TableView>
+                           </children>
+                        </VBox>
+                     </content>
+                </Tab>
+              </tabs>
+            </TabPane>
+         </children>
+      </VBox>
    </center>
 </BorderPane>
