--- a/src/main/resources/org/proview/test/UserManagForAdminView.fxml
+++ b/src/main/resources/org/proview/test/UserManagForAdminView.fxml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="691.0" prefWidth="1233.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.UserManagForAdminView">
     <top>
@@ -14,6 +18,55 @@
     <center>
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
+            <HBox alignment="CENTER" prefHeight="126.0" prefWidth="1126.0" spacing="20.0">
+               <children>
+                  <VBox alignment="CENTER" prefHeight="147.0" prefWidth="239.0">
+                     <children>
+                        <Label fx:id="totalUsersLabel" text="100">
+                           <font>
+                              <Font size="62.0" />
+                           </font>
+                        </Label>
+                        <Label text="Total Users">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </VBox>
+                  <VBox alignment="CENTER" prefHeight="147.0" prefWidth="239.0">
+                     <children>
+                        <Label fx:id="todayRegisLabel" text="100">
+                           <font>
+                              <Font size="62.0" />
+                           </font>
+                        </Label>
+                        <Label text="Today Registrations">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </VBox>
+                  <VBox alignment="CENTER" prefHeight="147.0" prefWidth="256.0">
+                     <children>
+                        <Label fx:id="thisWeekRegisLabel" text="100">
+                           <font>
+                              <Font size="62.0" />
+                           </font>
+                        </Label>
+                        <Label text="This Week Registrations">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                        </Label>
+                     </children>
+                     <HBox.margin>
+                        <Insets left="10.0" />
+                     </HBox.margin>
+                  </VBox>
+               </children>
+            </HBox>
             <TableView fx:id="usersTableView" prefHeight="624.0" prefWidth="1126.0" tableMenuButtonVisible="true">
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
