add data searching feature in admin management tables

--- a/src/main/resources/org/proview/test/IssueListView.fxml
+++ b/src/main/resources/org/proview/test/IssueListView.fxml
@@ -76,7 +76,7 @@
                               <HBox prefHeight="51.0" prefWidth="1305.0" spacing="20.0">
                                  <children>
                                     <ComboBox fx:id="currentColumnComboBox" prefWidth="150.0" promptText="Column" />
-                                    <TextField fx:id="currentSearchTextField" onKeyReleased="#onCurrentSearchKeyReleased" prefHeight="25.0" prefWidth="1138.0" promptText="Search" />
+                                    <TextField fx:id="currentSearchTextField" prefHeight="25.0" prefWidth="1138.0" promptText="Search" />
                                  </children>
                               </HBox>
                               <TableView fx:id="borrowingTableView" prefHeight="547.0" prefWidth="1305.0" tableMenuButtonVisible="true">
@@ -95,7 +95,7 @@
                               <HBox prefHeight="51.0" prefWidth="1305.0" spacing="20.0">
                                  <children>
                                     <ComboBox fx:id="pastColumnComboBox" prefHeight="25.0" prefWidth="148.0" promptText="Column" />
-                                    <TextField fx:id="pastSearchTextField" onKeyReleased="#onPastSearchKeyReleased" prefHeight="25.0" prefWidth="1135.0" promptText="Search" />
+                                    <TextField fx:id="pastSearchTextField" prefHeight="25.0" prefWidth="1135.0" promptText="Search" />
                                  </children>
                               </HBox>
                               <TableView fx:id="borrowedTableView" prefHeight="547.0" prefWidth="1305.0" tableMenuButtonVisible="true">
