--- a/src/main/resources/org/proview/test/ReviewCellView.fxml
+++ b/src/main/resources/org/proview/test/ReviewCellView.fxml
@@ -7,43 +7,52 @@
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="850.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Container.ReviewCellView">
+<VBox prefWidth="800.0" styleClass="box" stylesheets="@styles/ReviewCellView.css" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Container.ReviewCellView">
    <children>
-      <VBox alignment="TOP_CENTER" prefHeight="341.0" prefWidth="302.0">
+      <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="61.0" prefWidth="800.0">
          <children>
-            <Circle fx:id="avatarCircle" fill="DODGERBLUE" radius="50.0" stroke="BLACK" strokeType="INSIDE">
-               <VBox.margin>
-                  <Insets bottom="10.0" top="20.0" />
-               </VBox.margin>
-            </Circle>
-            <Label fx:id="reviewerLabel" text="Name">
-               <VBox.margin>
-                  <Insets bottom="10.0" />
-               </VBox.margin>
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Label>
-            <Label fx:id="reviewDateLabel" text="Date">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Label>
+            <VBox alignment="CENTER" prefHeight="61.0" prefWidth="60.0">
+               <children>
+                  <Circle fx:id="avatarCircle" fill="DODGERBLUE" radius="20.0" stroke="BLACK" strokeType="INSIDE" />
+               </children>
+            </VBox>
+            <VBox alignment="CENTER_LEFT" prefHeight="61.0" prefWidth="240.0">
+               <children>
+                  <Label fx:id="reviewerLabel" prefHeight="27.0" text="Name">
+                     <VBox.margin>
+                        <Insets top="5.0" />
+                     </VBox.margin>
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
+                  <HBox fx:id="ratingHBox" prefHeight="100.0" prefWidth="200.0" />
+               </children>
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin>
+            </VBox>
+            <VBox alignment="CENTER_RIGHT" prefHeight="61.0" prefWidth="500.0">
+               <children>
+                  <Label fx:id="reviewDateLabel" alignment="CENTER_RIGHT" prefHeight="27.0" text="Date">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets right="10.0" />
+                     </VBox.margin>
+                  </Label>
+               </children>
+            </VBox>
          </children>
-         <HBox.margin>
-            <Insets />
-         </HBox.margin>
-      </VBox>
-      <Label fx:id="reviewLabel" prefHeight="450.0" prefWidth="800.0" style="-fx-background-color: #E5E6E1;" text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec molestie mattis mauris id pharetra. Nulla facilisi. Suspendisse tristique, mi sit amet porttitor pretium, quam eros suscipit nibh, id dictum eros ligula a libero. Donec eget egestas urna. Cras risus nisi, malesuada ut mauris id, convallis iaculis justo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque id aliquet neque, sit amet auctor risus. Integer scelerisque ac erat non convallis. Curabitur vestibulum tincidunt felis. Sed ut nisl sollicitudin, scelerisque arcu sed, placerat diam. Suspendisse potenti. Aliquam tortor augue, malesuada nec congue sit amet, mollis vel arcu. Morbi accumsan justo quis risus condimentum, at bibendum diam interdum.&#10;&#10;Maecenas ut neque velit. Nam lobortis dolor non metus luctus varius suscipit elementum leo. Etiam ullamcorper, arcu a tempus cursus, ex ipsum gravida ligula, sed condimentum turpis eros et urna. Sed eu imperdiet augue, non sagittis orci. Donec dapibus semper tortor nec tincidunt. Pellentesque vitae mauris enim. Praesent sed lacus aliquam, elementum est gravida, varius lacus. Etiam eleifend leo aliquet ante dapibus fringilla. Phasellus tempor iaculis nisl. Aliquam erat volutpat. Aliquam erat volutpat. Donec purus urna, suscipit sit amet nibh in, scelerisque scelerisque metus. Donec nunc est, lacinia eget felis in, dapibus ornare lacus. Fusce cursus ornare metus, non rutrum eros volutpat at.&#10;" wrapText="true">
+      </HBox>
+      <Label fx:id="reviewLabel" prefHeight="131.0" prefWidth="803.0" style="-fx-background-color: #E5E6E1;" text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec molestie mattis mauris id pharetra. Nulla facilisi. Suspendisse tristique, mi sit amet porttitor pretium, quam eros suscipit nibh, id dictum eros ligula a libero. Donec eget egestas urna. Cras risus nisi, malesuada ut mauris id, convallis iaculis justo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque id aliquet neque, sit amet auctor risus. Integer scelerisque ac erat non convallis. Curabitur vestibulum tincidunt felis. Sed ut nisl sollicitudin, scelerisque arcu sed, placerat diam. Suspendisse potenti. Aliquam tortor augue, malesuada nec congue sit amet, mollis vel arcu. Morbi accumsan justo quis risus condimentum, at bibendum diam interdum.&#10;&#10;Maecenas ut neque velit. Nam lobortis dolor non metus luctus varius suscipit elementum leo. Etiam ullamcorper, arcu a tempus cursus, ex ipsum gravida ligula, sed condimentum turpis eros et urna. Sed eu imperdiet augue, non sagittis orci. Donec dapibus semper tortor nec tincidunt. Pellentesque vitae mauris enim. Praesent sed lacus aliquam, elementum est gravida, varius lacus. Etiam eleifend leo aliquet ante dapibus fringilla. Phasellus tempor iaculis nisl. Aliquam erat volutpat. Aliquam erat volutpat. Donec purus urna, suscipit sit amet nibh in, scelerisque scelerisque metus. Donec nunc est, lacinia eget felis in, dapibus ornare lacus. Fusce cursus ornare metus, non rutrum eros volutpat at.&#10;" wrapText="true">
          <font>
             <Font size="18.0" />
          </font>
-         <HBox.margin>
-            <Insets />
-         </HBox.margin>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
       </Label>
    </children>
-</HBox>
+</VBox>
