--- a/src/main/resources/org/proview/test/styles/BookInfoView.css
+++ b/src/main/resources/org/proview/test/styles/BookInfoView.css
@@ -31,3 +31,9 @@
 #star-rating .hbox {
     -fx-padding: 5px;
 }
+
+.hbox {
+    -fx-background-color: #A8DADC;
+    -fx-border-color: #1D3557;
+    -fx-border-radius: 5;
+}
